submit button works

--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
 <input type="radio" name="contact" value="phone">Phone
 
 
-<button type="contact-button" onclick="displayRadioValue()">
+<button type="contact-button">
   Submit</button>
 
   <div id="result"></div>
