--- a/client/index.html
+++ b/client/index.html
@@ -8,43 +8,18 @@
     <button id="complimentButton">Get a compliment</button>
   </br></br>
 
+ 
+    
 
-<div>
-      <label for="cars">Choose city:</label>
-      <select name="city" id="city">
-          <option value="Washington, DC">Washington, DC</option>
-          <option value="New York">New York</option>
-          <option value="Los Angeles">Los Angeles</option>
-          <option value="Chicago">Chicago</option>
-      </select>
-      <input type="submit" value="Submit">
 
-  
-  
-    </form>
-    </div> </br>
-
-    <section id="list-container">
-      <form>
+      <form id="submit-form">
         <input type="text" placeholder="Enter name here.." id="name-input">
-        <button onclick="submitName()">Submit </button>
-      </form>
-      <ul>
-        Names List:
-      </ul>
-    </section>
+        <button>Submit </button>
+        <div id="name-container">
 
-  
-    <p>Choose your preferred contact:</p>
+     
+        <!-- <section id="user-container"></section> -->
 
-<input type="radio" name="contact" value="email">Email
-<input type="radio" name="contact" value="phone">Phone
-
-
-<button type="contact-button">
-  Submit</button>
-
-  <div id="result"></div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
