--- a/client/index.html
+++ b/client/index.html
@@ -13,13 +13,11 @@
 
 
       <form id="submit-form">
-        <input type="text" placeholder="Enter name here.." id="name-input">
+        <input id="title" type="text" placeholder="Enter name here.." id="name-input">
         <button>Submit </button>
         <div id="name-container">
 
      
-        <!-- <section id="user-container"></section> -->
-
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
